MapImageProviderDynmapImageLoader.new: throws MalformedURLException; GuiInputBox: refactor