@@ -1,8 +1,6 @@
 package mirrg.minecraft.regioneditor.gui.guis;
 
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 
 import mirrg.boron.util.i18n.I18n;
@@ -20,18 +18,12 @@ public class GuiUrl extends GuiInputBox
 	public URL resultUrl;
 
 	@Override
-	protected boolean parse(String string)
+	protected boolean parse(String string) throws Exception
 	{
 		if (!super.parse(string)) return false;
 
-		try {
-			resultUri = new URI(string);
-			resultUrl = new URL(string);
-		} catch (URISyntaxException | MalformedURLException e1) {
-			e1.printStackTrace();
-			setException(e1);
-			return false;
-		}
+		resultUri = new URI(string);
+		resultUrl = new URL(string);
 
 		return true;
 	}
